tests/NormalTests/paczka1/small_fuzzy/14802673.err
Error in line 1: S697 S697 49,4
Error in line 2: 2rMIXbq9lP S402 2,6
Error in line 4: 2rMIXbq9lP S676 66,1
